--- a/src/main/resources/messages_hr_HR.properties
+++ b/src/main/resources/messages_hr_HR.properties
@@ -1,2 +1,4 @@
 index.courses.tagline=Internet Tecaj za Spring Framework
 index.courses.headline=Spring Framework Guru Tecaj
+
+product.page.buy.text=Kupi
