--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,5 @@
 index.page.title=Spring Framework Guru
 index.courses.tagline=Online Courses for Spring Framework
 index.courses.headline=Spring Framework Guru Courses
+
+product.page.buy.text=Buy Now
